2009-08-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_cancel_query.cxx:
 - Pretty much nothing we can test about cancel_query, apart from no segfault.
2009-08-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - libpq versions without PQcancel don't have PGcancel either.
 - Never consider unnamed statement prepared, thanks Trigve Siver.
 test/unit/test_cancel_query.cxx:
 - Added test for cancel_query, thanks Don Madden.
 test/unit/test_prepared_statement.cxx:
 - Test less volatile unnamed prepared statement, thanks RhodiumToad.
2009-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Made cancel_query public, thanks Don Madden.
 - Hid support for pre-PQcancel libpq versions a bit deeper.
 - Try harder to be graceful about canceling deactivated connections.
2009-08-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Mark statement definition as complete when varargs are added.
2009-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Tiny warning fix for 7.3 libpq versions.
2009-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/robusttransaction.hxx, src/robusttransaction.cxx:
 - Redid robusttransaction logic; may actually work now.
 src/connection_base.cxx:
 - Use string::empty.
 test/test018.cxx, test/test037.cxx:
 - Better transactor names.
 tools/preprelease:
 - Keep absolute tarball path out of md5sum file.
2009-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/internal/callgate.hxx:
 - Cleaned up constness, thanks Kirit Saelensminde.
2009-07-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/robusttransaction.hxx, src/connection_base.cxx,
 src/robusttransaction.cxx:
 - Redid robusttransaction.  Was completely broken.
2009-07-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/transaction_base.cxx:
 - Throw in_doubt again when trying to commit again while doubt.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx,